--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@babel/runtime": "7.0.0-beta.55",
 		"axios": "^1.5.1",
 		"bakrypt-launchpad": "^0.0.1",
+		"jszip": "^3.10.1",
 		"react": "16.13.1",
 		"react-dom": "16.13.1",
 		"sweetalert2": "^11.4.8"
