feat: added helpers function. updated comoser tested templates

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,10 @@
 {
-    "autoload":{
-      "classmap": [
-        "./includes"
-      ]
-    }
-  }
-  
+	"autoload": {
+		"classmap": [
+			"./includes"
+		],
+		"files": [
+			"helpers/functions.php"
+		]
+	}
+}
